# 5A-OpenCV-Poker

./: .gitignore  CMakeLists.txt  init.bat
headers/: Card.h  Image.h  PokerUtils.h
include/: Image.h  PokerAnalyzer.h  PokerCard.h  PokerCardValue.h  PokerTable.h
src/: Card.cpp  Image.cpp  Main.cpp  Main.h  PokerAnalyzer.cpp  PokerCard.cpp  PokerCardValue.cpp  PokerTable.cpp  PokerUtils.cpp  SolutionAResult.h
